--- a/wwwroot/user-dashboard.html
+++ b/wwwroot/user-dashboard.html
@@ -5,40 +5,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panel Użytkownika</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet" />
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      background-color: #e6f7ff;
-      color: #003366;
-      text-align: center;
+      background-color: #1f1f1f;
+      color: #eee;
+      font-family: 'Montserrat', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 20px;
     }
 
     .dashboard-container {
+      background-color: #2e2e2e;
+      padding: 40px;
+      border-radius: 15px;
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+        0 10px 10px rgba(0, 0, 0, 0.22);
+      text-align: center;
       max-width: 600px;
-      margin: 50px auto;
-      padding: 30px;
-      background-color: #ccedff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      width: 100%;
     }
 
     h1 {
-      color: #0056b3;
+      color: #ffffff;
+      margin-bottom: 20px;
     }
 
     p {
       font-size: 1.1em;
+      color: #ccc;
+      margin-bottom: 15px;
     }
 
     a {
       display: inline-block;
       margin-top: 20px;
-      padding: 10px 20px;
+      padding: 12px 30px;
       background-color: #007bff;
-      color: white;
+      color: #fff;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 20px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
     }
 
     a:hover {
@@ -49,10 +66,10 @@
 
 <body>
   <div class="dashboard-container">
-    <h1>Witaj na Stronie Panelu Użytkownika!</h1>
-    <p>To jest strona, na którą zostałeś przekierowany po udanym logowaniu.</p>
-    <p>Tutaj możesz umieścić spersonalizowane treści i funkcje dla zalogowanego użytkownika.</p>
-    <a href="/">Wróć do strony logowania/rejestracji</a>
+    <h1>Witaj w Panelu Użytkownika!</h1>
+    <p>Jesteś zalogowany. Możesz teraz korzystać z funkcji dostępnych dla użytkowników.</p>
+    <p>To miejsce na twoje dane, quizy, statystyki lub inne elementy systemu.</p>
+    <a href="/">Wyloguj się</a>
   </div>
 </body>
 
