--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -284,13 +284,13 @@
     <div class="overlay-container">
       <div class="overlay">
         <div class="overlay-panel overlay-left">
-          <h1>Witaj ponownie!</h1>
-          <p>Aby pozostać z nami, zaloguj się swoim kontem</p>
+          <h1>Logowanie!</h1>
+          <p>Zaloguj sie i korzystaj z platformy!</p>
           <button class="ghost" id="signIn">Zaloguj się</button>
         </div>
         <div class="overlay-panel overlay-right">
-          <h1>Cześć, przyjacielu!</h1>
-          <p>Wprowadź swoje dane i rozpocznij z nami podróż</p>
+          <h1>Rejestracja</h1>
+          <p>Aby korzystac z platformy musisz sie zalogowac!</p>
           <button class="ghost" id="signUp">Zarejestruj się</button>
         </div>
       </div>
